[REFACTOR] Extract hardcoded values, replace deprecated APIs, modernize Stream usage, improve logging and exception handling