@@ -21,7 +21,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 
 @RestController
 @RequestMapping("/api/orders")
@@ -37,9 +37,7 @@ public class OrderController {
         try {
             Order order = orderService.createOrder(request.getTableNumber());
             return ResponseEntity.status(HttpStatus.CREATED).body(mapToOrderResponse(order));
-        } catch (TableNotAvailableException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
-        } catch (IllegalArgumentException e) {
+        } catch (TableNotAvailableException | IllegalArgumentException e) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
         }
     }
@@ -58,7 +56,7 @@ public class OrderController {
     public ResponseEntity<List<OrderResponse>> getAllOrders() {
         List<OrderResponse> orders = orderService.findAllOrders().stream()
                 .map(this::mapToOrderResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(orders);
     }
 
@@ -182,7 +180,7 @@ public class OrderController {
                                 .quantity(item.getQuantity())
                                 .subtotal(item.getSubtotal())
                                 .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 } 
